--- a/css/materialize.css
+++ b/css/materialize.css
@@ -195,6 +195,10 @@
   color: #D50000 !important;
 }
 
+.wine {
+  color: rgb(72, 18, 43) !important;
+}
+
 .pink {
   background-color: #e91e63 !important;
 }
